# litellm-key-updater

./: .gitignore  AGENTS.md  Architecture.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ToDo NextAction.txt  analyse_env.py  auth_analysis.md  check_key.py  config.template.json  get_bearer.py  install.sh  logger.py  main.py  pyproject.toml  renew_key.py  report.py  standalone.md  update_secret_manager.py  update_secretmgr.py  utils.py
.roo/rules-code/: code-export.yaml
config/: config.template.json
docs/: Architecture.md  VSCode_Extension_API_Key_Management.md  auth_analysis.md  standalone.md
src/litellm_key_updater/: __init__.py  analyse_env.py  check_key.py  get_bearer.py  logger.py  renew_key.py  report.py  update_secretmgr.py  utils.py
tests/: test_packaging.py  test_renew_key.py
